--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="card">
                 <div class="card-icon">🧵</div>
                 <h3>Лялькові мультфільми</h3>
-                <p>Анімація, створена за допомогою ляльок Stop-motion анімація.</p>
+                <p>Анімація, створена за допомогою Stop-motion анімації.</p>
                 <a href="movie-stop-motion.html" class="btn">Дивитися приклад (Кораліна)</a>
             </div>
 
@@ -57,3 +57,4 @@
 </body>
 
 </html>
+
